src/test/run-pass/issue-2414-c.rs
// xfail-fast
// aux-build:issue-2414-a.rs
// aux-build:issue-2414-b.rs

extern mod b;

fn main() {}
